[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.test]
opt-level = 1
debug = true


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
rust_decimal = { version = "1.36.0", features = ["maths"] }
serde = { version = "1.0.209", features = ["derive"] }
once_cell = "1.19.0"
rust_decimal_macros = "1.36.0"
lazy_static = "1.5.0"
fastrand = "2.1.1"
